@@ -1,10 +1,10 @@
+import com.github.spotbugs.snom.Confidence
+import com.github.spotbugs.snom.Effort
 import com.github.spotbugs.snom.SpotBugsTask
-
 
 plugins {
     id 'base'
-    id 'com.github.node-gradle.node' version '3.5.1'
-    id 'com.github.spotbugs' version '5.0.13'
+    id 'com.github.spotbugs' version '6.0.7'
     id 'version-catalog'
     id 'ru.vyarus.use-python'
 }
@@ -181,12 +181,11 @@ subprojects { subproj ->
 
     apply plugin: 'java'
     apply plugin: 'java-test-fixtures'
-    apply plugin: 'jacoco'
     apply plugin: 'com.github.spotbugs'
 
     java {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
         compileJava {
             options.compilerArgs += ["-Werror", "-Xlint:all,-serial,-processing"]
         }
@@ -218,50 +217,13 @@ subprojects { subproj ->
         }
     }
 
-    jacoco {
-        toolVersion = "0.8.8"
-    }
-
-    jacocoTestReport {
-        reports {
-            html.required = true
-            xml.required = true
-            csv.required = false
-        }
-    }
-    def jacocoTestReportTask = tasks.named('jacocoTestReport')
-    jacocoTestReportTask.configure {
-        dependsOn tasks.named('test')
-    }
-
-    jacocoTestCoverageVerification {
-        violationRules {
-            failOnViolation = false
-            rule {
-                element = 'CLASS'
-                excludes = ['**/*Test*', '**/generated*']
-                limit {
-                    counter = 'BRANCH'
-                    minimum = 0.8
-                }
-                limit {
-                    counter = 'INSTRUCTION'
-                    minimum = 0.8
-                }
-            }
-        }
-    }
-
     spotbugs {
         ignoreFailures = false
-        effort = 'max'
+        effort = Effort.valueOf(rootProject.ext.skipSlowTests ? 'MIN' : 'MAX')
         excludeFilter.set rootProject.file('spotbugs-exclude-filter-file.xml')
-        reportLevel = 'high'
+        reportLevel = Confidence.valueOf('HIGH')
         showProgress = false
-        toolVersion = '4.7.3'
-        if (rootProject.ext.skipSlowTests && isConnectorProject(subproj)) {
-            effort = 'min'
-        }
+        toolVersion = '4.8.3'
     }
 
     test {
@@ -277,6 +239,12 @@ subprojects { subproj ->
                 outputPerTestCase = true
             }
         }
+
+        // This is required by mockito, see https://github.com/mockito/mockito/issues/3037.
+        jvmArgs "-XX:+EnableDynamicAgentLoading"
+        // This is also required, to prevent stderr spam starting with
+        //   "OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader cl..."
+        jvmArgs "-Xshare:off"
 
         // Set the timezone to UTC instead of picking up the host machine's timezone,
         // which on a developer's laptop is more likely to be PST.
@@ -321,12 +289,6 @@ subprojects { subproj ->
             exclude '**/io/airbyte/integrations/source/**'
             exclude '**/io/airbyte/integrations/destination/**'
         }
-
-        jacoco {
-            enabled = !rootProject.ext.skipSlowTests
-            excludes = ['**/*Test*', '**/generated*']
-        }
-        finalizedBy jacocoTestReportTask
     }
 
     dependencies {
@@ -348,8 +310,7 @@ subprojects { subproj ->
         testFixturesImplementation libs.junit.pioneer
 
         // adds owasp plugin
-        spotbugsPlugins libs.findsecbugs.plugin
-        implementation libs.spotbugs.annotations
+        implementation 'com.github.spotbugs:spotbugs-annotations:4.8.3'
     }
 
     tasks.withType(SpotBugsTask).configureEach {
